# llvm-gen

./: .gitignore  CMakeLists.txt  README  README.md
src/: compiler.cpp  compiler.h  jit.cpp  jit.h  llvm.h  main.cpp  mila.h  runtime.cpp  test.cpp
src/mila/: ast.cpp  ast.h  parser.h  printer.h  scanner.cpp  scanner.h
src/opt/: cp.h  cp_hw.h  cp_test.hpp  dce.h  die.h  dse.h  inlining.h  opts.cpp  tail_recursion.h  unrolling.h
src/tests/: tests.cpp  tests.h
tests/: dce.mila  gcd.mila  loop.mila  mila+.mila  prog.mila  test.mila  tests.mila
